<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.cruciblecrab.quietmusicplayer.VolumeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/linearLayout"

        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_height="match_parent"
            android:text="@string/album"
            android:id="@+id/albumbutton" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_height="match_parent"
            android:text="@string/artists"
            android:id="@+id/artistbutton" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_height="match_parent"
            android:text="@string/playlists"
            android:id="@+id/playlistbutton" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_height="match_parent"
            android:text="@string/songs"
            android:id="@+id/songbutton"
            android:onClick="songButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/vol_up"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/volumetext"
            android:text="19"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/vol_down"/>


    </LinearLayout>

    <include layout="@layout/layout_music_control"
        android:id="@+id/include"/>



</RelativeLayout>
